# discovery-agent

./: .env.example  README.md  analysis.json  pyproject.toml
src/discovery_agent/: crew.py  main.py  models.py
src/discovery_agent/config/: agents.yaml  tasks.yaml
src/discovery_agent/tools/: api_contract_scanner.py  chunk_tools.py  db_schema_scanner.py  endpoint_scanner.py  repo_mcp_tools.py  robust_search_repo_patterns.py  search_repo_patterns.py  ui_router_scanner.py  validator_scanner.py  visual_identity_scanner.py
src/user_histories/: crew.py  main.py  tools.py
src/user_histories/config/: agents.yaml  tasks.yaml
