[project]
name = "discovery_agent"
version = "0.1.0"
description = "discovery-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0",
    "python-dotenv>=1.1.1",
]

[project.scripts]
discovery_agent = "discovery_agent.main:run"
run_crew = "discovery_agent.main:run"
train = "discovery_agent.main:train"
replay = "discovery_agent.main:replay"
test = "discovery_agent.main:test"
user_histories = "user_histories.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
